# tutti

./: Cargo.toml
.github/workflows/: ci.yml
crates/tutti-app-core/: Cargo.toml
crates/tutti-app-core/src/: lib.rs
crates/tutti-backend-claude/: Cargo.toml
crates/tutti-backend-claude/src/: artifact.rs  lib.rs  prompt.rs  stream.rs
crates/tutti-backend-claude/tests/: live.rs
crates/tutti-backend-claude/tests/fixtures/: real-stream.jsonl
crates/tutti-cli/: Cargo.toml
crates/tutti-cli/src/: lock.rs  main.rs  wire.rs
crates/tutti-core/: Cargo.toml
crates/tutti-core/src/: browse.rs  config.rs  domain.rs  engine.rs  events.rs  executor.rs  gate.rs  lib.rs  message.rs  status.rs  tracking.rs  traits.rs  workspace.rs
crates/tutti-core/src/routing/: mod.rs  phase_stacking.rs  trunk.rs
crates/tutti-core/src/testing/: fake_backend.rs  fake_browser.rs  fake_forge.rs  mod.rs
crates/tutti-core/tests/: drain_loop.rs
crates/tutti-forge-gitea/: Cargo.toml
crates/tutti-forge-gitea/src/: browse.rs  lib.rs  parse.rs
crates/tutti-forge-gitea/tests/: live.rs
crates/tutti-forge-gitea/tests/fixtures/: browse_error.json  browse_orgs.json  browse_repos.json  browse_user.json  create_repo.json  created_issue.json  issues.json  labels.json  milestone_children.json  milestones.json
crates/tutti-forge-github/: Cargo.toml
crates/tutti-forge-github/src/: browse.rs  lib.rs  parse.rs
crates/tutti-forge-github/tests/: live.rs
crates/tutti-forge-github/tests/fixtures/: browse_orgs.json  browse_repos.json  browse_user.json  create_repo.json  created_issue.json  issue_with_summary.json  milestone_children.json  milestones.json  sub_issues.json
crates/tutti-forge-gitlab/: Cargo.toml
crates/tutti-forge-gitlab/src/: browse.rs  lib.rs  parse.rs
crates/tutti-forge-gitlab/tests/: live.rs
crates/tutti-forge-gitlab/tests/fixtures/: browse_groups.json  browse_projects.json  browse_user.json  create_project.json  epic_issues.json  epics.json  issue.json  issues.json  labels.json  milestones.json  project.json
crates/tutti-git/: Cargo.toml
crates/tutti-git/src/: lib.rs
docs/notes/: 2026-07-11-live-tier.md  2026-07-11-skill-activation-spike.md
docs/specs/: 2026-07-10-tutti-engine-design.md  2026-07-11-tutti-forge-tracking-design.md  2026-07-11-tutti-live-adapters-design.md  2026-07-14-tutti-slice3b-glab-tea-design.md  2026-07-17-tutti-cli-forge-selection-design.md  2026-07-20-tutti-app-shell-board-design.md  2026-07-21-tutti-app-init-project-design.md  2026-07-21-tutti-app-multiproject-design.md  2026-07-22-tutti-app-browse-forge-design.md  2026-07-22-tutti-app-init-wizard-design.md  2026-07-23-tutti-app-board-untriaged-design.md  2026-07-23-tutti-app-create-repo-design.md
tutti-app/: package.json
tutti-app/src/: app.html
tutti-app/src-tauri/: Cargo.toml  tauri.conf.json
tutti-app/src-tauri/src/: commands.rs  driver.rs  lib.rs  main.rs  state.rs
tutti-app/src/lib/: board.test.ts  board.ts  browse.test.ts  browse.ts  create.test.ts  create.ts  ipc.ts  stores.test.ts  stores.ts  wizard.test.ts  wizard.ts
tutti-app/src/lib/components/: BoardView.svelte  BrowseForge.svelte  CreateRepo.svelte  InitWizard.svelte  IssueDrawer.svelte  LanesView.svelte  QuestionCard.svelte  Resizer.svelte  RoadmapRail.svelte  Sidebar.svelte  TopBar.svelte
tutti-app/src/routes/: +page.svelte
