[workspace]
members = ["crates/tutti-core", "crates/tutti-app-core", "crates/tutti-git", "crates/tutti-backend-claude", "crates/tutti-forge-github", "crates/tutti-forge-gitea", "crates/tutti-forge-gitlab", "crates/tutti-cli"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
