[package]
name = "tutti-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "tutti"
path = "src/main.rs"

[dependencies]
tutti-core = { path = "../tutti-core" }
tutti-git = { path = "../tutti-git" }
tutti-backend-claude = { path = "../tutti-backend-claude" }
tutti-forge-github = { path = "../tutti-forge-github" }
tutti-forge-gitea = { path = "../tutti-forge-gitea" }
tutti-forge-gitlab = { path = "../tutti-forge-gitlab" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "time"] }

[dev-dependencies]
tempfile = "3"
