[package]
name = "tutti-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "process", "sync", "time"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "test-util"] }
