[package]
name = "tutti-git"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
tutti-core = { path = "../tutti-core" }
async-trait = "0.1"
tokio = { version = "1", features = ["process", "rt", "macros"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["process", "rt", "rt-multi-thread", "macros"] }
