[package]
name = "tutti-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tutti_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process"] }

tutti-app-core = { path = "../../crates/tutti-app-core" }
tutti-core = { path = "../../crates/tutti-core" }
tutti-git = { path = "../../crates/tutti-git" }
tutti-backend-claude = { path = "../../crates/tutti-backend-claude" }
tutti-forge-github = { path = "../../crates/tutti-forge-github" }
tutti-forge-gitea = { path = "../../crates/tutti-forge-gitea" }
tutti-forge-gitlab = { path = "../../crates/tutti-forge-gitlab" }

[workspace]

